// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component tests Default Link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  cursor="pointer"
  disabled={false}
  enableFocusRing={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "flex-start",
    }
  }
  tooltip="https://www.bing.com"
>
  <Text
    ellipsizeMode="tail"
    focusable={false}
    numberOfLines={0}
    style={
      Object {
        "alignSelf": "flex-start",
        "fontFamily": "Segoe UI",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
        "variant": "body1",
      }
    }
  >
    Link to Bing
  </Text>
</View>
`;

exports[`Link component tests Default Link as a pressable 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  cursor="pointer"
  disabled={false}
  enableFocusRing={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "flex-start",
    }
  }
>
  <Text
    ellipsizeMode="tail"
    focusable={false}
    numberOfLines={0}
    style={
      Object {
        "alignSelf": "flex-start",
        "fontFamily": "Segoe UI",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
        "variant": "body1",
      }
    }
  >
    Link to Bing
  </Text>
</View>
`;

exports[`Link component tests Inline Link 1`] = `
<Text
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  cursor="pointer"
  disabled={false}
  ellipsizeMode="tail"
  enableFocusRing={true}
  focusable={true}
  numberOfLines={0}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "flex-start",
      "fontFamily": "Segoe UI",
      "fontSize": 13,
      "fontWeight": "400",
      "margin": 0,
      "textDecorationLine": "underline",
      "variant": "body1",
    }
  }
  tooltip="https://www.bing.com"
>
  Link to Bing
</Text>
`;

exports[`Link component tests Subtle Link 1`] = `
<View
  accessibilityRole="link"
  accessibilityState={
    Object {
      "disabled": false,
    }
  }
  accessible={true}
  appearance="subtle"
  cursor="pointer"
  disabled={false}
  enableFocusRing={true}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onPress={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignSelf": "flex-start",
    }
  }
  tooltip="https://www.bing.com"
>
  <Text
    ellipsizeMode="tail"
    focusable={false}
    numberOfLines={0}
    style={
      Object {
        "alignSelf": "flex-start",
        "color": "#616161",
        "fontFamily": "Segoe UI",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
        "variant": "body1",
      }
    }
  >
    Link to Bing
  </Text>
</View>
`;
